--- a/theme02/package.json
+++ b/theme02/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "sass": "^1.43.4",
+    "sass-loader": "^10.2.0",
     "vue": "^2.6.11",
     "vue-morris": "^1.1.0",
     "vuex": "^3.6.2"
