--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "sass-loader": "^10.2.0",
     "vue": "^2.6.11",
     "vue-morris": "^1.1.0",
+    "vue-router": "^3.5.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
