--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,4 +1,3 @@
-# Choose the Image which has Node installed already
 FROM node:lts-alpine
 
 # install simple http server for serving static content
@@ -8,7 +7,7 @@ RUN npm install -g http-server
 WORKDIR /app
 
 # copy both 'package.json' and 'package-lock.json' (if available)
-COPY package*.json ./
+COPY package*.json .
 
 # install project dependencies
 RUN npm install
@@ -20,4 +19,5 @@ COPY . .
 RUN npm run build
 
 EXPOSE 8080
+
 CMD [ "http-server", "dist" ]
