--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 bootstrap-*.tar
 */.env
+
+/kubernetes/*service-account.*json
