fix cloudbuild & pipeline

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -18,6 +18,8 @@ RUN mix local.hex --force && mix local.rebar --force
 # Install dependencies and compile to speed up the container creation
 RUN mix deps.get && mix do compile
 
+RUN chmod +x entrypoint.sh
+
 EXPOSE 4000
 
 CMD ["/app/entrypoint.sh" ]
