--- a/kubernetes/pipeline.yml
+++ b/kubernetes/pipeline.yml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
         - name: api
-          image: europe-west1-docker.pkg.dev/timemanager-330510/pr-ftw-repo/time-manager-api
+          image: europe-west1-docker.pkg.dev/timemanager-330510/pr-ftw-repo/time-manager-api:1.0
+          imagePullPolicy: Always
           ports:
             - containerPort: 4000
           env:
@@ -72,7 +73,8 @@ spec:
     spec:
       containers:
         - name: front
-          image: europe-west1-docker.pkg.dev/timemanager-330510/pr-ftw-repo/time-manager-front
+          image: europe-west1-docker.pkg.dev/timemanager-330510/pr-ftw-repo/time-manager-front:1.0
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
           env:
