--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,6 @@
-.elixir_ls
-# The directory Mix will write compiled artifacts to.
-bootstrap/todo-list/_build/
-.idea
-# If you run "mix test --cover", coverage assets end up here.
-bootstrap/todo-list/cover/
-
-# The directory Mix downloads your dependencies sources to.
-bootstrap/todo-list/deps/
-
-# Where 3rd-party dependencies like ExDoc output generated docs.
-bootstrap/todo-list/doc/
-
-# Ignore .fetch files in case you like to edit your project deps locally.
-bootstrap/todo-list/.fetch
-
-# If the VM crashes, it generates a dump, let's ignore it too.
-erl_crash.dump
-
-# Also ignore archive artifacts (built via "mix archive.build").
-*.ez
-
-# Ignore package tarball (built via "mix hex.build").
-bootstrap-*.tar
+# dev ENV files
 **/.env
 */.env
 
+# Service account keys
 /kubernetes/*service-account.*json
