--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "node-sass": "^6.0.1",
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
     "vue": "^2.6.11",
