--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.176",
+    "@types/vue-feather-icons": "^5.0.2",
     "axios": "^0.24.0",
     "chart.js": "^3.6.0",
     "core-js": "^3.6.5",
@@ -18,6 +19,7 @@
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
     "vue": "^2.6.11",
+    "vue-feather-icons": "^5.1.0",
     "vue-morris": "^1.1.0",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2"
