--- a/front/package.json
+++ b/front/package.json
@@ -18,9 +18,9 @@
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
     "vue": "^2.6.11",
-    "vue-morris": "^1.1.0",
     "vue-router": "^3.5.3",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
