--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,10 @@
 **/.env
 */.env
 
+# ignore lock
+**/package-lock.json
+*/package-lock.json
+package-lock.json
+
 # Service account keys
 /kubernetes/*service-account.*json
