--- a/kubernetes/cloudbuild.yml
+++ b/kubernetes/cloudbuild.yml
@@ -8,6 +8,7 @@ steps:
         "${_LOCATION}-docker.pkg.dev/$PROJECT_ID/${_ARTIFACT_REPO}/${_API_IMAGE_NAME}:${_TAG}",
         "api",
       ]
+    id: "Build api image 🔨"
   - name: "gcr.io/cloud-builders/docker"
     args:
       [
@@ -16,6 +17,7 @@ steps:
         "${_LOCATION}-docker.pkg.dev/$PROJECT_ID/${_ARTIFACT_REPO}/${_FRONT_IMAGE_NAME}:${_TAG}",
         "front",
       ]
+    id: "Build front image 🔨"
 
   # Docker Push
   - name: "gcr.io/cloud-builders/docker"
@@ -24,12 +26,14 @@ steps:
         "push",
         "${_LOCATION}-docker.pkg.dev/$PROJECT_ID/${_ARTIFACT_REPO}/${_API_IMAGE_NAME}:${_TAG}",
       ]
+    id: "Push api image 🚀"
   - name: "gcr.io/cloud-builders/docker"
     args:
       [
         "push",
         "${_LOCATION}-docker.pkg.dev/$PROJECT_ID/${_ARTIFACT_REPO}/${_FRONT_IMAGE_NAME}:${_TAG}",
       ]
+    id: "Push front image 🚀"
 
   # deploy container image to GKE
   - name: "gcr.io/cloud-builders/gke-deploy"
@@ -38,6 +42,7 @@ steps:
       - --filename=${_PIPELINE_PATH}
       - --location=${_LOCATION}
       - --cluster=${_CLUSTER_NAME}
+    id: "Apply deployments ✈️"
 
 substitutions:
   _PIPELINE_PATH: kubernetes/pipeline.yml
@@ -46,4 +51,4 @@ substitutions:
   _ARTIFACT_REPO: pr-ftw-repo
   _API_IMAGE_NAME: time-manager-api
   _FRONT_IMAGE_NAME: time-manager-front
-  _TAG: "1.0"
+  _TAG: "1.2"
