--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.6.11",
     "vue-feather-icons": "^5.1.0",
     "vue-router": "^3.5.3",
+    "vue-typed-mixins": "^0.2.0",
     "vuex": "^3.6.2",
     "webpack": "^4.46.0"
   },
