--- a/kubernetes/pr-ftw-ingress.yml
+++ b/kubernetes/pr-ftw-ingress.yml
@@ -2,22 +2,24 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: pr-tfw-ingress
+  annotations:
+    kubernetes.io/ingress.global-static-ip-name: pr-ftw-ip
+    networking.gke.io/managed-certificates: pr-ftw-certificate
+    kubernetes.io/ingress.class: "gce"
 spec:
-  # tls:
-  #   - hosts:
-  #       - ai-doc-domain.com
-  #     secretName: ai-doc-secret-tls
   rules:
-    # - host: ai-doc-domain.com
+    - host: pr-ftw-timemanager.ml
     - http:
         paths:
-          - path: /api
+          - path: /api/*
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: api-service
                 port:
                   number: 4000
-          - path: /front
+          - path: /*
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: front-service
